// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseListFilters 1`] = `
<div>
  <input
    onChange={[Function]}
    type="text"
    value=""
  />
  <select
    onChange={[Function]}
    value="date"
  >
    <option
      value="date"
    >
      Date
    </option>
    <option
      value="amount"
    >
      Amount
    </option>
  </select>
  <ForwardRef(DateRangePicker)
    calendars={1}
    clearable={true}
    endText="End date"
    inputFormat="dd/MM/yyyy"
    onChange={[Function]}
    renderInput={[Function]}
    startText="Start date"
    value={
      Array [
        null,
        null,
      ]
    }
  />
</div>
`;

exports[`should render ExpenseListFilters with alt filters 1`] = `
<div>
  <input
    onChange={[Function]}
    type="text"
    value="bills"
  />
  <select
    onChange={[Function]}
    value="amount"
  >
    <option
      value="date"
    >
      Date
    </option>
    <option
      value="amount"
    >
      Amount
    </option>
  </select>
  <ForwardRef(DateRangePicker)
    calendars={1}
    clearable={true}
    endText="End date"
    inputFormat="dd/MM/yyyy"
    onChange={[Function]}
    renderInput={[Function]}
    startText="Start date"
    value={
      Array [
        "1970-01-01T02:00:00.000+02:00",
        "1970-01-04T02:00:00.000+02:00",
      ]
    }
  />
</div>
`;
